Switch to JPMS module