@@ -82,6 +82,7 @@
               <java.util.logging.config.file>${project.build.testOutputDirectory}/logging.properties</java.util.logging.config.file>
             </systemPropertyVariables>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <argLine>--add-opens io.xlate.yamljson/io.xlate.yamljson=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -111,13 +112,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.2.0</version>
-          <configuration>
-            <archive>
-              <manifestEntries>
-                <Automatic-Module-Name>io.xlate.yamljson</Automatic-Module-Name>
-              </manifestEntries>
-            </archive>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -196,6 +190,7 @@
       <dependency>
         <groupId>org.glassfish</groupId>
         <artifactId>jakarta.json</artifactId>
+        <classifier>module</classifier>
         <version>${version.jakarta.json-api}</version>
       </dependency>
     </dependencies>
@@ -226,6 +221,7 @@
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.json</artifactId>
+      <classifier>module</classifier>
       <scope>test</scope>
     </dependency>
   </dependencies>
